dependent_vect/tests/safety/assign.stderr
error[E0308]: mismatched types
 --> $DIR/assign.rs:6:10
  |
6 |     v1 = v2;
  |          ^^ expected struct `main::N`, found a different struct `main::N`
  |
  = note: expected tuple `(main::N, dependent_vect::Vect<_, main::N>)` (struct `main::N`)
             found tuple `(main::N, dependent_vect::Vect<_, main::N>)` (struct `main::N`)

error[E0308]: mismatched types
 --> $DIR/assign.rs:7:10
  |
7 |     v2 = v1;
  |          ^^ expected struct `main::N`, found a different struct `main::N`
  |
  = note: expected tuple `(main::N, dependent_vect::Vect<_, main::N>)` (struct `main::N`)
             found tuple `(main::N, dependent_vect::Vect<_, main::N>)` (struct `main::N`)
